# zach-manno-dot-io

./: .gitignore  README.md
backend/node_dynamo_db_backend/: README.md  samconfig.toml  template.yaml
backend/node_dynamo_db_backend/.aws-sam/: build.toml
backend/node_dynamo_db_backend/node-dynamo-backend/: app.js  package.json
backend/rust_backend_function/: Cargo.toml  Dockerfile  README.md  build_deploy.sh  samconfig.toml  template.yaml
backend/rust_backend_function/src/: lambda_gateway.rs  main.rs  weather.rs  zachmanno_dot_io_weather.rs
cft/: cft.yml
scripts/: generate_new_blogpost.py
scripts/blogpost-templates/: new-post-template.html
zachmanno.io/: package-lock.json  package.json  serverless.yml
zachmanno.io/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
zachmanno.io/static/: about.html  blog.html  index.html
zachmanno.io/static/blogposts/: blogpost-feb-5-2022.html  blogpost-feb-7-2022.html  blogpost-jan-5-2022.html
zachmanno.io/static/css/: styles.css
zachmanno.io/static/js/: scripts.js
zachmanno.io/template/: package-lock.json
