[package]
name = "rust_backend_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }
tower-http = { version = "0.2", features = ["cors"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

